--- a/core/components/asides/docs/changelog.txt
+++ b/core/components/asides/docs/changelog.txt
@@ -2,8 +2,18 @@
 Changelog for Asides.
 --------------------------------------------------------------------------------
 
-2011/09/xx: 1.0.1-pl
+2011/09/20: 1.0.2-beta2
 ========================================================
+- added idx, first, last, total placeholders
+- prefixed the placeholders
+- showAside snippet becomes Asides
+- Removed getAside snippet
+- Usage of chunks property sets to 'hide' some content
+  from the site editor (edit_locked right required,
+  placeholders available = before, after)
+- Some RTE refactoring (TinyMCE is no more requiered &
+  better integrated)
+- Added NL translation from Mark Hamstra
 - Added i18n for the search widget (on the grid) + clear
   filters input
 - Fixed issue where upgrading causes to reset the input
