Fix issue allowing locked chunks to be edited

--- a/core/components/asides/docs/changelog.txt
+++ b/core/components/asides/docs/changelog.txt
@@ -2,6 +2,10 @@
 Changelog for Asides.
 --------------------------------------------------------------------------------
 
+2011/10/06: 1.0.2-rc2
+========================================================
+- Fixed issue allowing editing locked chunks
+
 2011/10/06: 1.0.2-rc1
 ========================================================
 - Better i18n
