--- a/core/components/asides/docs/changelog.txt
+++ b/core/components/asides/docs/changelog.txt
@@ -2,6 +2,10 @@
 Changelog for Asides.
 --------------------------------------------------------------------------------
 
+2012/09/19: 1.1.0-dev1
+========================================================
+- Fixed compatibility issues for MODX 2.2
+
 2011/10/06: 1.0.2-rc2
 ========================================================
 - Fixed issue allowing editing locked chunks
